# spa-server

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: main.rs  routes.rs
