[package]
name = "spa-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
opentelemetry = "0.18.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log-always"] }
tracing-error = "0.2.0"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
warp = { version = "0.3.3", features = ["tokio-rustls"] }
